_Source/force-app/main/default/objects/Opportunity/fields/BI_Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Owner_Name__c</fullName>
    <description>Get the account owner last name of opportunity</description>
    <formula>Account.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>