_Source/force-app/main/default/objects/Opportunity/fields/BI_Actual_Incremental_Sales_Rev_JV__c.field-meta.xml
<CustomField>
    <fullName>BI_Actual_Incremental_Sales_Rev_JV__c</fullName>
    <label>Actual Incremental Sales / Rev (UA + JV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>