_Source/force-app/main/default/objects/Opportunity/fields/BI_Actual_Revenue_JV__c.field-meta.xml
<CustomField>
    <fullName>BI_Actual_Revenue_JV__c</fullName>
    <inlineHelpText>Modeled/Actual JV Net Revenue (including United).  Enter value in line with your &apos;Opportunity Values Reflect&apos; selection.</inlineHelpText>
    <label>Actual Sales/Revenue (UA + JV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>