_Source/force-app/main/default/objects/Opportunity/fields/BI_Actual_Revenue_UA__c.field-meta.xml
<CustomField>
    <fullName>BI_Actual_Revenue_UA__c</fullName>
    <inlineHelpText>Modeled/Actual United only Net Revenue. Enter value in line with your &apos;Opportunities value reflect&apos; selection.</inlineHelpText>
    <label>Actual Sales/Revenue (UA Only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>