_Source/force-app/main/default/objects/Opportunity/fields/BI_Airline_Alliance_Update__c.field-meta.xml
<CustomField>
    <fullName>BI_Airline_Alliance_Update__c</fullName>
    <label>Airline Alliance Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Displaced OA - Became Primary</fullName>
            </value>
            <value>
                <fullName>Displaced OA - Became Co-Primary</fullName>
            </value>
            <value>
                <fullName>Displaced OA - Became Secondary</fullName>
            </value>
            <value>
                <fullName>New to Program - Primary</fullName>
            </value>
            <value>
                <fullName>New to Program - Secondary</fullName>
            </value>
            <value>
                <fullName>New to Program - Tertiary</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>