_Source/force-app/main/default/objects/Opportunity/fields/BI_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>BI_Closed_Reason__c</fullName>
    <inlineHelpText>Please indicate the accomplishments or short comings of this Opportunity</inlineHelpText>
    <label>Closing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>