_Source/force-app/main/default/objects/Opportunity/fields/BI_Competitor__c.field-meta.xml
<CustomField>
    <fullName>BI_Competitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Specify the Primary competitor for this opportunity</inlineHelpText>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Custom Accounts, with the Custom Account Type  &apos;Airline&apos;, are available.Reference the account list view &apos;23 All Custom Accounts (Airlines) for existing values. If the competing airline don&apos;t exist, create a new custom account with cus type as Airline</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BI_International_Account</value>
        </filterItems>
        <filterItems>
            <field>Account.BI_Account_Type__c</field>
            <operation>equals</operation>
            <value>Airline</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities Competed For</relationshipLabel>
    <relationshipName>Accounts_Opportunities_Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>