_Source/force-app/main/default/objects/Opportunity/fields/BI_Contact__c.field-meta.xml
<CustomField>
    <fullName>BI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary customer contact (Note that the contact you specify here must exist as a contact record for the account that this opportunity is for)</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Primary Contact person must exist AND belong to the same account that this opportunity is for</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>