_Source/force-app/main/default/objects/Opportunity/fields/BI_Contract_Action__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_Action__c</fullName>
    <label>Contract Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>New Acquisition</fullName>
                <isActive>false</isActive>
                <label>New Acquisition</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>