_Source/force-app/main/default/objects/Opportunity/fields/BI_Contract_Lead_Carrier__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_Lead_Carrier__c</fullName>
    <label>Contract Lead Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>LH</fullName>
            </value>
            <value>
                <fullName>LX</fullName>
            </value>
            <value>
                <fullName>NH</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
            <value>
                <fullName>SN</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>