_Source/force-app/main/default/objects/Opportunity/fields/BI_Contracted_Annual_Amenity_Dollars__c.field-meta.xml
<CustomField>
    <fullName>BI_Contracted_Annual_Amenity_Dollars__c</fullName>
    <inlineHelpText>Enter value based on your selection in &apos;Opportunity Values Reflect&apos; field.</inlineHelpText>
    <label>Contracted Amenity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>