_Source/force-app/main/default/objects/Opportunity/fields/BI_Contracted_Annual_Global_Services__c.field-meta.xml
<CustomField>
    <fullName>BI_Contracted_Annual_Global_Services__c</fullName>
    <label>Contracted Annual Global Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>