_Source/force-app/main/default/objects/Opportunity/fields/BI_Contracted_Incremental_Sales_Rev_UA__c.field-meta.xml
<CustomField>
    <fullName>BI_Contracted_Incremental_Sales_Rev_UA__c</fullName>
    <inlineHelpText>Applicable to US/Canada points; actual for APAC/EMEAI points of Sales</inlineHelpText>
    <label>Contracted Incremental Sales / Rev - UA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>