_Source/force-app/main/default/objects/Opportunity/fields/BI_Contracted_Sales_JV__c.field-meta.xml
<CustomField>
    <fullName>BI_Contracted_Sales_JV__c</fullName>
    <inlineHelpText>Self-Serve Tool for UCS contracted, otherwise appropriate source for your region including YQ (incl. all IPOS). For all contract based opportunities, enter Annual amount.</inlineHelpText>
    <label>Total Contracted Sales / Rev - JV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>