_Source/force-app/main/default/objects/Opportunity/fields/BI_Cost__c.field-meta.xml
<CustomField>
    <fullName>BI_Cost__c</fullName>
    <inlineHelpText>Values in discount dollars. Enter Estimated cost and update with accurate value from model when closing Opportunity</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>