_Source/force-app/main/default/objects/Opportunity/fields/BI_Current_Market_Share_Cabin__c.field-meta.xml
<CustomField>
    <fullName>BI_Current_Market_Share_Cabin__c</fullName>
    <label>Current Market Share (Cabin %)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>