_Source/force-app/main/default/objects/Opportunity/fields/BI_Current_Net_Eff_Discount__c.field-meta.xml
<CustomField>
    <fullName>BI_Current_Net_Eff_Discount__c</fullName>
    <label>Net Effective Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>