_Source/force-app/main/default/objects/Opportunity/fields/BI_Data_Last_Modified_On__c.field-meta.xml
<CustomField>
    <fullName>BI_Data_Last_Modified_On__c</fullName>
    <label>Data Last Modified On?</label>
    <type>Date</type>
</CustomField>