_Source/force-app/main/default/objects/Opportunity/fields/BI_Discount__c.field-meta.xml
<CustomField>
    <fullName>BI_Discount__c</fullName>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>