_Source/force-app/main/default/objects/Opportunity/fields/BI_Discount_Investment__c.field-meta.xml
<CustomField>
    <fullName>BI_Discount_Investment__c</fullName>
    <label>Discount / Commission Investment ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>