_Source/force-app/main/default/objects/Opportunity/fields/BI_Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>BI_Duration_in_Months__c</fullName>
    <description>calculated based on the &quot;End Date subtracted by Start Date.&quot; The result of that calculation should be in Months</description>
    <formula>IF(NOT(ISBLANK(BI_End_Date__c )) &amp;&amp; NOT(ISBLANK(BI_Start_Date__c ))
     ,(((YEAR(BI_End_Date__c ) - YEAR(BI_Start_Date__c  ) - 1) *12) + (12 - MONTH(BI_Start_Date__c )) + MONTH(BI_End_Date__c ) + 1)
     , 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>