_Source/force-app/main/default/objects/Opportunity/fields/BI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_End_Date__c</fullName>
    <inlineHelpText>Contract / Tactical / Amendment End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>