_Source/force-app/main/default/objects/Opportunity/fields/BI_Est_Incremental_Sales_Revenue_JV__c.field-meta.xml
<CustomField>
    <fullName>BI_Est_Incremental_Sales_Revenue_JV__c</fullName>
    <description>Estimated additional JV sales/revenue expected. Enter estimated amount in line with your &apos;Opportunity Values Reflect&apos; selection. For North America, enter contracted value when closing opportunity</description>
    <label>Est. Incremental Sales/Revenue (UA + JV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>