_Source/force-app/main/default/objects/Opportunity/fields/BI_Estimated_Incremental_Sales__c.field-meta.xml
<CustomField>
    <fullName>BI_Estimated_Incremental_Sales__c</fullName>
    <description>Estimated additional UA sales/revenue expected. Enter estimated amount in line with your &apos;Opportunity Values Reflect&apos; selection. For North America, enter contracted value when closing opportunity</description>
    <label>Est. Incremental Sales/Revenue (UA Only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>