_Source/force-app/main/default/objects/Opportunity/fields/BI_Estimated_Travel_Spend_Industry__c.field-meta.xml
<CustomField>
    <fullName>BI_Estimated_Travel_Spend_Industry__c</fullName>
    <label>Estimated Travel Spend (Industry)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>