_Source/force-app/main/default/objects/Opportunity/fields/BI_Fare_Base_Code__c.field-meta.xml
<CustomField>
    <fullName>BI_Fare_Base_Code__c</fullName>
    <label>Fare Basis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>