_Source/force-app/main/default/objects/Opportunity/fields/BI_Image_Contract_Dates__c.field-meta.xml
<CustomField>
    <fullName>BI_Image_Contract_Dates__c</fullName>
    <formula>IF( RecordType.DeveloperName  = &apos;BI_Corporate&apos; || RecordType.DeveloperName  = &apos;BI_TMC_Contract&apos;, 
IMAGE(&quot;/resource/1560366702000/BI_Opportunity_Contract_Dates1?&quot;,&quot;perf info&quot;),
IMAGE(&quot;/resource/1560366702000/BI_Opportunity_Tactical_Dates1?&quot;,&quot;perf info&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This is a good time to</label>
    <type>Text</type>
</CustomField>