_Source/force-app/main/default/objects/Opportunity/fields/BI_Image_Financials__c.field-meta.xml
<CustomField>
    <fullName>BI_Image_Financials__c</fullName>
    <formula>IF( RecordType.DeveloperName  = &apos;BI_Corporate&apos;, 
IMAGE(&quot;/resource/1560366702000/BI_Opportunity_Financials1?&quot;,&quot;perf info&quot;),
IMAGE(&quot;/resource/1560366702000/BI_Opportunity_Financials2?&quot;,&quot;perf info&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next - be sure to</label>
    <type>Text</type>
</CustomField>