_Source/force-app/main/default/objects/Opportunity/fields/BI_Include_in_Executive_Weekly__c.field-meta.xml
<CustomField>
    <fullName>BI_Include_in_Executive_Weekly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Executive Weekly is a SVP dashboard that highlights closed opportunities for the last 7 days, based on the opportunity close date. Only closed (won or lost) opportunities with this checkbox checked, are included.</inlineHelpText>
    <label>Include in Executive Weekly</label>
    <type>Checkbox</type>
</CustomField>