_Source/force-app/main/default/objects/Opportunity/fields/BI_Interested_Program_Type_s__c.field-meta.xml
<CustomField>
    <fullName>BI_Interested_Program_Type_s__c</fullName>
    <label>Interest Program Type(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Program_Type</valueSetName>
    </valueSet>
</CustomField>