_Source/force-app/main/default/objects/Opportunity/fields/BI_International_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>BI_International_Roll_Up__c</fullName>
    <formula>IF(CONTAINS(Owner.Manager.Title, &apos;Mexico&apos;) ||  CONTAINS(Owner.Manager.Manager.Title, &apos;Mexico&apos;), &apos;MEXICO&apos;, 

IF((CONTAINS(BI_Owner_Sales_Division__c, &apos;LATIN&apos;) || CONTAINS(BI_Owner_Sales_Division__c, &apos;BRAZIL&apos;)) &amp;&amp; (CONTAINS(BI_Owner_Sales_Region__c, &apos;RIO&apos;) || CONTAINS(Owner.Manager.Title, &apos;BRA&apos;) ||  CONTAINS(Owner.Manager.Manager.Title, &apos;BRA&apos;)), &apos;BRAZIL&apos;, 

IF(CONTAINS(BI_Owner_Sales_Division__c, &apos;LATIN&apos;) &amp;&amp; (CONTAINS(Owner.Manager.Title, &apos;Andean&apos;) ||  CONTAINS(Owner.Manager.Manager.Title, &apos;Andean&apos;)), &apos;ANDEAN REGION&apos;, 

IF(CONTAINS(BI_Owner_Sales_Division__c, &apos;LATIN&apos;) &amp;&amp; (CONTAINS(BI_Owner_Sales_Region__c, &apos;TEGUCIGALPA SALES&apos;) || CONTAINS(BI_Owner_Sales_Region__c, &apos;SAN PEDRO SALES&apos;) || CONTAINS(BI_Owner_Sales_Region__c, &apos;GUATEMALA&apos;) 
 || CONTAINS(Owner.Manager.Title, &apos;Caribbean&apos;) ||  CONTAINS(Owner.Manager.Manager.Title, &apos;Caribbean&apos;)), &apos;CARIBBEAN &amp; CENTRAL AMERICA&apos;, 

IF((TEXT(Owner.SIP_Country__c) = &apos;SINGAPORE&apos; || TEXT(Owner.SIP_Country__c) = &apos;THAILAND&apos; || TEXT(Owner.SIP_Country__c) = &apos;MALAYSIA&apos; || TEXT(Owner.SIP_Country__c) = &apos;VIETNAM&apos; || TEXT(Owner.SIP_Country__c) = &apos;PHILIPPINES&apos; ||

TEXT(Owner.Manager.SIP_Country__c) = &apos;SINGAPORE&apos; || TEXT(Owner.Manager.SIP_Country__c) = &apos;THAILAND&apos; || TEXT(Owner.Manager.SIP_Country__c) = &apos;MALAYSIA&apos; || TEXT(Owner.Manager.SIP_Country__c) = &apos;VIETNAM&apos; || TEXT(Owner.Manager.SIP_Country__c) = &apos;PHILIPPINES&apos;), &apos;SINGAPORE, THAILAND, MALAYSIA, INDONESIA, VIETNAM, PHILIPPINES&apos;, 
IF(CONTAINS(BI_Owner_Sales_Division__c, &apos;LATIN&apos;) &amp;&amp; (CONTAINS(Owner.Title, &apos;City&apos;) || CONTAINS(Owner.Title, &apos;CT&apos;) || CONTAINS(Owner.Manager.Title, &apos;City&apos;) || CONTAINS(Owner.Manager.Title, &apos;CT&apos;)), &apos;CITY TICKET OFFICES&apos;, IF(CONTAINS(BI_Owner_Sales_Division__c, &apos;ISRAEL&apos;) || CONTAINS( TEXT(Owner.Manager.BI_Objective_Division__c) , &apos;ISRAEL&apos;),&apos;ISRAEL&apos;,TEXT(Owner.Manager.BI_Objective_Division__c))
)
)

)

)

)
)</formula>
    <label>International Roll-Up</label>
    <type>Text</type>
</CustomField>