_Source/force-app/main/default/objects/Opportunity/fields/BI_Lightning_Action_Spacer_1__c.field-meta.xml
<CustomField>
    <fullName>BI_Lightning_Action_Spacer_1__c</fullName>
    <label>.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>