_Source/force-app/main/default/objects/Opportunity/fields/BI_Market__c.field-meta.xml
<CustomField>
    <fullName>BI_Market__c</fullName>
    <label>Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>