_Source/force-app/main/default/objects/Opportunity/fields/BI_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>BI_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>