_Source/force-app/main/default/objects/Opportunity/fields/BI_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunity_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(Account.BI_Abbreviated_Account_Name__c)),Account.BI_Abbreviated_Account_Name__c+&apos; - &apos;+
CASE(
MONTH(  CloseDate ), 
1, 
&quot;Q1&quot; , 
2, 
&quot;Q1&quot;, 
3, 
&quot;Q1&quot;, 
4, 
&quot;Q2&quot;, 
5, 
&quot;Q2&quot;, 
6, 
&quot;Q2&quot;, 
7, 
&quot;Q3&quot;, 
8, 
&quot;Q3&quot;, 
9, 
&quot;Q3&quot;, 
10, 
&quot;Q4&quot;, 
11, 
&quot;Q4&quot;, 
12, 
&quot;Q4&quot;, 
&quot;None&quot;
)+&apos; - &apos;+TEXT(YEAR(CloseDate ))+&apos; - &apos;+ Name  
,  LEFT(Account.Name,15)+&apos; - &apos;+
CASE(
MONTH(CloseDate ), 
1, 
&quot;Q1&quot; , 
2, 
&quot;Q1&quot;, 
3, 
&quot;Q1&quot;, 
4, 
&quot;Q2&quot;, 
5, 
&quot;Q2&quot;, 
6, 
&quot;Q2&quot;, 
7, 
&quot;Q3&quot;, 
8, 
&quot;Q3&quot;, 
9, 
&quot;Q3&quot;, 
10, 
&quot;Q4&quot;, 
11, 
&quot;Q4&quot;, 
12, 
&quot;Q4&quot;, 
&quot;None&quot;
)+&apos; - &apos;+TEXT(YEAR(CloseDate))+&apos; - &apos;+ Name)</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>