_Source/force-app/main/default/objects/Opportunity/fields/BI_Part_of_my_Team__c.field-meta.xml
<CustomField>
    <fullName>BI_Part_of_my_Team__c</fullName>
    <description>The Part of my Team field identifies whether or not the record owner is a part sales hierarchy.</description>
    <formula>IF ( OR($User.Id = Owner.Id, $User.Id = Owner.ManagerId, $User.Id = Owner.Manager.ManagerId,$User.Id = Owner.Manager.Manager.ManagerId, $User.Id = Owner.Manager.Manager.Manager.ManagerId ,$User.Id = Owner.Manager.Manager.Manager.Manager.ManagerId ,$User.Id = Owner.Manager.Manager.Manager.Manager.Manager.ManagerId ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of my Team</label>
    <type>Checkbox</type>
</CustomField>