_Source/force-app/main/default/objects/Opportunity/fields/BI_Particpating_JV_Carriers__c.field-meta.xml
<CustomField>
    <fullName>BI_Particpating_JV_Carriers__c</fullName>
    <label>Particpating JV Carriers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific JV  (UA, NH)</fullName>
            </value>
            <value>
                <fullName>A++ JV (UA, AC, LH, LX, OS, SN)</fullName>
            </value>
            <value>
                <fullName>LH Group (LH,LX,OS, SN)</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>LH</fullName>
            </value>
            <value>
                <fullName>LX</fullName>
            </value>
            <value>
                <fullName>NH</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
            <value>
                <fullName>SN</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>