_Source/force-app/main/default/objects/Opportunity/fields/BI_Potential_annual_incremental_value__c.field-meta.xml
<CustomField>
    <fullName>BI_Potential_annual_incremental_value__c</fullName>
    <label>Potential annual incremental value ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>