_Source/force-app/main/default/objects/Opportunity/fields/BI_Primary_Opportunity_Inbox_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_Primary_Opportunity_Inbox_Email__c</fullName>
    <label>Primary Opportunity Inbox Email</label>
    <type>Email</type>
</CustomField>