_Source/force-app/main/default/objects/Opportunity/fields/BI_Promo_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Promo_Category__c</fullName>
    <inlineHelpText>Only applicable if you selected &apos;Marketing &amp; Promotions&apos; as the Interested Program Type&apos;</inlineHelpText>
    <label>Promo Category (Mktg &amp; Promo prog type)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate &amp; Business Development Promotions (CP)</fullName>
            </value>
            <value>
                <fullName>TA Promotions (TA)</fullName>
            </value>
            <value>
                <fullName>General Promotions (GP)</fullName>
            </value>
            <value>
                <fullName>Digital Acquisition (DA)</fullName>
            </value>
            <value>
                <fullName>Sales Support Tool Box (TB)</fullName>
            </value>
            <value>
                <fullName>Communication / Education (CE)</fullName>
            </value>
            <value>
                <fullName>Misc. (MI)</fullName>
            </value>
            <value>
                <fullName>Star Marketing (SM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>