_Source/force-app/main/default/objects/Opportunity/fields/BI_Related_Objective__c.field-meta.xml
<CustomField>
    <fullName>BI_Related_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Objective</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only objectives that belong to you, or to the opportunity owner (if it is someone other that you), are available for relating to this opportunity</errorMessage>
        <filterItems>
            <field>BI_Objectives__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <filterItems>
            <field>BI_Objectives__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BI_Objectives__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>