_Source/force-app/main/default/objects/Opportunity/fields/BI_Report_As__c.field-meta.xml
<CustomField>
    <fullName>BI_Report_As__c</fullName>
    <label>Report As</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General / Noteworthy Win / Tactical</fullName>
            </value>
            <value>
                <fullName>Moved to Higher Preferred Position</fullName>
            </value>
            <value>
                <fullName>Maintained Current Preferred Position</fullName>
            </value>
            <value>
                <fullName>Moved to Lower Preferred Position</fullName>
            </value>
            <value>
                <fullName>Competitive Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>