_Source/force-app/main/default/objects/Opportunity/fields/BI_RFP__c.field-meta.xml
<CustomField>
    <fullName>BI_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to denote that this opportunity is a response to an RFP</inlineHelpText>
    <label>RFP</label>
    <type>Checkbox</type>
</CustomField>