_Source/force-app/main/default/objects/Opportunity/fields/BI_RFP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_RFP_Due_Date__c</fullName>
    <label>RFP Due Date</label>
    <type>Date</type>
</CustomField>